[sonar-lint] fix all sonar lint warning